--- a/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomContinueView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="421" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great Job!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs8-eh-KVU">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs8-eh-KVU">
                     <rect key="frame" x="10" y="10" width="401" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="spc-Un-9pR"/>
@@ -31,13 +31,12 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzU-iN-xzr">
                     <rect key="frame" x="30" y="60" width="361" height="35"/>
-                    <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="gHg-pM-INH"/>
                     </constraints>
                     <color key="tintColor" name="porcelain"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Continue">
+                    <buttonConfiguration key="configuration" style="plain" title="">
                         <fontDescription key="titleFontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                     </buttonConfiguration>
                     <userDefinedRuntimeAttributes>
