--- a/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
@@ -11,6 +11,7 @@
             <connections>
                 <outlet property="imageView" destination="L5M-bK-GFP" id="JmQ-4A-9SH"/>
                 <outlet property="nameLabel" destination="4rN-vp-yWD" id="lTU-U0-lLr"/>
+                <outlet property="welcomeLabel" destination="95m-fs-raK" id="KXM-AX-lRx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -55,7 +56,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" name="darkBlue"/>
+            <color key="backgroundColor" name="backDarkBlue"/>
             <constraints>
                 <constraint firstItem="pTR-6V-eTq" firstAttribute="leading" secondItem="L5M-bK-GFP" secondAttribute="trailing" constant="10" id="B3m-fI-jcG"/>
                 <constraint firstItem="L5M-bK-GFP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="FuE-gV-LLc"/>
@@ -72,8 +73,8 @@
     </objects>
     <resources>
         <image name="bell.badge.fill" catalog="system" width="117" height="128"/>
-        <namedColor name="darkBlue">
-            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="backDarkBlue">
+            <color red="0.10588235294117647" green="0.12549019607843137" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
